2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed missing macro replacing in
	async modules' event description.

2013-10-14  Junichi Satoh <junichi@rworks.jp>

	* NetBSD/pandora_server.conf: Updated default settings as the same
	as Linux ones.

2013-10-09  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Fixed ping monitoring failure on NetBSD.
	Contributed by Hiroki SHIMIZU. Thanks!

2013-10-08  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Added p5-JSON to description for FreeBSD.

2013-10-07  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed data_module feature adding the data
	to be inserted into parameter list. The retro-compatibility has been 
	broken, but this feature was useless, so it shouldnt be a problem.

2013-09-29  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Updated default settings as the same
	as Linux ones.

2013-09-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Some HTML entities were not being
	  decoded.

	* lib/PandoraFMS/Core.pm: Set the severity or alert recovery events to
	  NORMAL.

2013-09-22  Junichi Satoh <junichi@rworks.jp>

	* bin/tentacle_server: Upgraded to 0.4.0. (Imported from trunk of
	tentacled repository.)
	Added support for IPv6 and improved to be able to bind multiple
	interfaces and/or IP addresses.
	Added support for 'TCP Wrappers'. When the 'Authen::Libwrap' is
	installed and -T option is specified, this feature can be used.

2013-09-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Validate existing events with the same 'ID extra' instead
	  of treating them as a single event.

2013-09-12  Ramon Novoa  <rnovoa@artica.es>

	* NetBSD/pandora_server.conf,
	  FreeBSD/pandora_server.conf,
	  conf/pandora_server.conf.new: Removed an unused token.

	* lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/Core.pm: Changed the module status macro to return a
	  string instead of the numeric value.
